--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-papaparse": "^4.4.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
     "watch": "^0.13.0",
